@@ -929,7 +929,7 @@ $lang['general_settings'] = "General Settings";
 $lang['generic'] = "Generic";
 $lang['globalconfig'] = "Settings - Global";
 $lang['globalmetadata'] = "Global Metadata";
-$lang['global_umask'] = "File Creation Mask (umask)";
+$lang['global_umask'] = "File and Directory Creation Mask (umask)";
 $lang['goto'] = "Back to:";
 $lang['group'] = "Group";
 $lang['groupassignmentdescription'] = "Here you can assign users to groups.";
