@@ -52,7 +52,7 @@ class wizard_step9 extends wizard_step
         $this->message(lang('msg_clearedcache'));
 
         // write protect config.php
-        @chmod("$destdir/config.php",0444); // TODO 0440 better
+        @chmod("$destdir/config.php",0444);  //TODO 0440 better c.f. global_umask site-preference
 
         audit('','CMSMS version '.CMS_VERSION,'Upgraded');
 
@@ -79,7 +79,7 @@ class wizard_step9 extends wizard_step
         if( !$siteinfo ) throw new Exception(lang('error_internal',902));
 
         $this->message(lang('install_createtmpdirs'));
-        @mkdir($destdir.'/tmp/cache',0777,TRUE);
+        @mkdir($destdir.'/tmp/cache',0777,TRUE); //TODO 0770 better c.f. global_umask site-preference
         @mkdir($destdir.'/tmp/templates_c',0777,TRUE);
 
         // install modules
@@ -97,7 +97,7 @@ class wizard_step9 extends wizard_step
         }
 
         // write protect config.php
-        @chmod("$destdir/config.php",0444); // TODO 0440 better
+        @chmod("$destdir/config.php",0444); // TODO 0440 better c.f. global_umask site-preference
 
         $root_url = $app->get_root_url();
         if( endswith($root_url,'/') ) $root_url = rtrim($root_url,' /');
@@ -171,11 +171,11 @@ class wizard_step9 extends wizard_step
         $destdir = $app->get_destdir();
         if( !$destdir ) throw new Exception(lang('error_internal',903));
         $this->message(lang('install_createtmpdirs'));
-        @mkdir($destdir.'/tmp/cache',0777,TRUE);
+        @mkdir($destdir.'/tmp/cache',0777,TRUE); // TODO 0770 better c.f. global_umask site-preference
         @mkdir($destdir.'/tmp/templates_c',0777,TRUE);
 
         // write protect config.php
-        @chmod("$destdir/config.php",0444); // TODO 0440 better
+        @chmod("$destdir/config.php",0444); // TODO 0440 better c.f. global_umask site-preference
 
         // clear the cache
         $this->connect_to_cmsms($destdir);
